# qip-dashboard

./: .gitignore  QIP-CH8.6-AI-Analysis-Integration.md  QIP-Control-Chart-Mapping-WorkPlan .md  QIP-Control-Chart-Type-Selection.md  QIP-Dashboard-Complete-WorkSpec-v2.md  QIP-Dashboard-Project-Plan.md  QIP-Dashboard-工作說明書.md  QIP-DataEntry-System-Spec-v1.3.md  QIP監測指標系統遷移計畫書.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  start.bat  品管中心資訊化技術堆疊規範.md  品管中心資訊化技術堆疊規範_v1.1.md  系統設計計畫書_v3.4.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  init-db.sql  pyproject.toml  requirements.txt  start.bat
backend/apps/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_campus.py  (+3 more)
backend/apps/analysis/: apps.py
backend/apps/davinci/: apps.py  constants.py  models.py  tests.py  urls.py  views.py
backend/apps/entry/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py  views_case_list.py  views_dashboard.py  views_entry.py  views_import.py  views_review.py
backend/apps/imports/: admin.py  apps.py  models.py  urls.py  views.py
backend/apps/indicators/: admin.py  apps.py  constants.py  element_schema.json  models.py  serializers.py  strict_schema.py  urls.py  views.py  views_export.py
backend/config/: urls.py  wsgi.py
backend/config/settings/: base.py  prod.py
backend/dashboard/: app.py
backend/dashboard/pages/: 1_📊_儀表板.py  2_📈_指標詳情.py  3_📥_資料匯入.py  4_⚙️_設定.py
backend/tests/: conftest.py
(+281 files in other folders)
