[project]
name = "qip-dashboard"
version = "0.5.0"
description = "QIP 監測指標儀表板 — 新竹臺大分院品質管理中心"
requires-python = ">=3.12"

dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "celery>=5.4",
    "django-environ>=0.11",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "numpy>=1.26",
    "python-Levenshtein>=0.25",
    "streamlit>=1.30",
    "plotly>=5.18",
    "pandas>=2.2",
    "gunicorn>=22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "ipython>=8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
